# console-xls-to-json

./: .gitignore  README.md
project-json-1/: INSTALL.txt  Makefile  configure  configure.ac  configure.scan
project-json-1/MacOS/: xlstojson
project-json-1/platform/: libjson-7.lib
xls-to-json/: INSTALL.txt  Makefile.in  xlstojson.cc  xlstojson.h
xls-to-json/Visual C++/: utf8.c  xlstojson.sln
xls-to-json/Visual C++/xlstojson/: xlstojson.vcxproj  xlstojson.vcxproj.filters
xml-to-json/: Makefile.am  xlstojson.cc  xlstojson.h
xml-to-json/.deps/: xlstojson.Po
xml-to-json/Visual C++/: xmltojson.sln
xml-to-json/Visual C++/xmltojson/: xmltojson.vcxproj  xmltojson.vcxproj.filters
